--- a/num_methods/first/lab2+.ipynb
+++ b/num_methods/first/lab2+.ipynb
@@ -1,14 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "# import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
     "%matplotlib inline"
