--- a/num_methods/second/lab4.ipynb
+++ b/num_methods/second/lab4.ipynb
@@ -359,7 +359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This show's us that solutions of explicit scheme are **unstable**, while solutions using implicit scheme are **stable**"
+    "This shows us that solutions of explicit scheme are **unstable**, while solutions using implicit scheme are **stable**"
    ]
   }
  ],
