Add lab3 for math modelling

--- a/num_methods/second/lab2.ipynb
+++ b/num_methods/second/lab2.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -266,7 +266,7 @@
    "source": [
     "def runge_kutta4_system(fs, x, y0):\n",
     "    h = x[1] - x[0]\n",
-    "    y = np.ndarray((len(x), len(y0)))\n",
+    "    y = np.empty((len(x), len(y0)))\n",
     "    y[0] = y0\n",
     "    for i in range(1, len(x)):\n",
     "        k1 = h * fmap(fs, [x[i - 1], *y[i - 1]])\n",
