Update lab3 math modelling

--- a/math_modelling/lab3/lab3.ipynb
+++ b/math_modelling/lab3/lab3.ipynb
@@ -73,7 +73,7 @@
     "We are going to solve the next problem\n",
     "\n",
     "$$\n",
-    "\\large \\frac{dy}{dt} =  \n",
+    "\\frac{dy}{dt} =  \n",
     "\\begin{pmatrix}\n",
     "  0 & 1 & 0 & 0 & 0 & 0 \\\\\n",
     "  -\\frac{c_2 + c_1}{m_1} & 0 & \\frac{c_2}{m_1} & 0 & 0 & 0 \\\\\n",
@@ -83,7 +83,7 @@
     "  0 & 0 & \\frac{c_3}{m_3} & 0 & -\\frac{c_4 + c_3}{m_3} & 0\n",
     " \\end{pmatrix}\n",
     " y = Ay, \\\\\n",
-    " \\large y(t_0) = y_{ans}(t_0)\n",
+    " y(t_0) = y_{ans}(t_0)\n",
     "$$"
    ]
   },
@@ -125,10 +125,10 @@
     "\n",
     "Let's assume that \n",
     "$$\n",
-    "\\large (c_1, c_2, c_3, c_4) = (4, 4, 6, 3), \\\\\n",
-    "\\large (m_1, m_2, m_3) = (4, 2, 3), \\\\\n",
-    "\\large t \\in [0, 10], \\Delta t = 0.1, \\\\\n",
-    "\\large y(0) = (0, 1, 0, 3, 0, 2)\n",
+    "(c_1, c_2, c_3, c_4) = (4, 4, 6, 3), \\\\\n",
+    "(m_1, m_2, m_3) = (4, 2, 3), \\\\\n",
+    "t \\in [0, 10], \\Delta t = 0.1, \\\\\n",
+    "y(0) = (0, 1, 0, 3, 0, 2)\n",
     "$$"
    ]
   },
@@ -229,7 +229,7 @@
    "source": [
     "Now we can compare results, using **Frobenius** norm\n",
     "$$\n",
-    "\\large ||A||_F = \\Bigg[ \\sum_{i,j} \\Big|a_{i,j}\\Big|^2 \\Bigg]^{1/2}\n",
+    "||A||_F = \\Big[ \\sum_{i,j} \\big|a_{i,j}\\big|^2 \\Big]^{1/2}\n",
     "$$"
    ]
   },
@@ -277,23 +277,21 @@
    "source": [
     "We are going to solve next problem\n",
     "$$\n",
-    "\\large \\frac{dU(t)}{dt} = \\frac{\\partial (Ay)}{\\partial y^T} U(t) + \\frac{\\partial (Ay)}{\\partial \\beta^T}(t), \\\\\n",
-    "\\large U(t_0) = 0,\n",
+    "\\frac{dU(t)}{dt} = \\frac{\\partial (Ay)}{\\partial y^T} U(t) + \\frac{\\partial (Ay)}{\\partial \\beta^T}(t), \\\\\n",
+    "U(t_0) = 0,\n",
     "$$\n",
     "In our case we have\n",
     "$$\n",
-    "\\large\n",
     "\\frac{\\partial (Ay)}{\\partial y^T} = A\n",
     "$$\n",
     "Let's denote\n",
     "$$\n",
-    "\\large\n",
     "B(t) = \\frac{\\partial (Ay)}{\\partial \\beta^T}\n",
     "$$\n",
     "Finally we have\n",
     "$$\n",
-    "\\large \\frac{dU(t)}{dt} = A \\cdot U(t) + B(t), \\\\\n",
-    "\\large U(t_0) = 0,\n",
+    "\\frac{dU(t)}{dt} = A \\cdot U(t) + B(t), \\\\\n",
+    "U(t_0) = 0,\n",
     "$$\n",
     "\n",
     "**NOTE! We can compute $B(t)$ only in some points. So we are going to compress our variable $t$ twice to use RK4.**"
@@ -334,7 +332,6 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large\n",
     "B(t) = \\frac{\\partial}{\\partial \\beta^T} \n",
     "\\begin{pmatrix}\n",
     "  0 & 1 & 0 & 0 & 0 & 0 \\\\\n",
@@ -354,7 +351,6 @@
     "  y_6 \\\\\n",
     "  \\frac{c_3}{m_3} y_3 - \\frac{c_4 + c_3}{m_3} y_5\n",
     "\\end{pmatrix} = \\\\\n",
-    "\\large\n",
     "=\\begin{pmatrix}\n",
     "  0 & 0 & 0 \\\\\n",
     "  -\\frac{1}{m_1} y_1 & \\frac{c_2 + c_1}{m_1^2} y_1 - \\frac{c_2}{m_1^2} y_3 & 0 \\\\\n",
@@ -395,7 +391,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large \\Delta \\beta = \\Bigg( \\int_{t_0}^{t_k} U^T(t)U(t)dt \\Bigg)^{-1} \\int_{t_0}^{t_k} U^T(t)(y_{ans}(t) - y(t))dt\n",
+    "\\Delta \\beta = \\Big( \\int_{t_0}^{t_k} U^T(t)U(t)dt \\Big)^{-1} \\int_{t_0}^{t_k} U^T(t)(y_{ans}(t) - y(t))dt\n",
     "$$"
    ]
   },
@@ -425,7 +421,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\large I(\\beta) = \\int_{t_0}^{t_k} (y_{ans}(t) - y(t))^T(y_{ans}(t) - y(t))dt\n",
+    "I(\\beta) = \\int_{t_0}^{t_k} (y_{ans}(t) - y(t))^T(y_{ans}(t) - y(t))dt\n",
     "$$"
    ]
   },
@@ -481,10 +477,10 @@
    "source": [
     "Here we have\n",
     "$$\n",
-    "\\large (c_2, c_3, c_4, m_3) = (0.3, 0.2, 0.12, 18), \\\\\n",
-    "\\large \\beta = (c_1, m_1, m_2)^T, \\\\\n",
-    "\\large \\beta_0 = (0.1, 11, 23)^T, \\\\\n",
-    "\\large t \\in [0, 50], \\Delta t = 0.2,\n",
+    "(c_2, c_3, c_4, m_3) = (0.3, 0.2, 0.12, 18), \\\\\n",
+    "\\beta = (c_1, m_1, m_2)^T, \\\\\n",
+    "\\beta_0 = (0.1, 11, 23)^T, \\\\\n",
+    "t \\in [0, 50], \\Delta t = 0.2,\n",
     "$$"
    ]
   },
