Finish lab 2 for decision theory

--- a/decision_theory/lab2.ipynb
+++ b/decision_theory/lab2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Logo](https://harzing.com/img/i/inclrank.jpeg)"
+    "![Image](https://harzing.com/img/i/inclrank.jpeg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "array([ 5. ,  3.5,  2. ,  1. ,  7. ,  3.5,  6. ,  8. ])"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "array([ 5. ,  2.5,  2.5,  1. ,  8. ,  4. ,  6. ,  7. ])"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "[[4, 7]]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,8 +133,7 @@
     "    for j in range(i + 1, m):\n",
     "        if (average_rank[i] - average_rank[j])*(median_rank[i] - median_rank[j]) < 0:\n",
     "            kernel.append([i, j])\n",
-    "            adj[i][j] = True\n",
-    "            adj[j][i] = True\n",
+    "            adj[i][j] = adj[j][i] = True\n",
     "kernel"
    ]
   },
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +180,7 @@
        "[3, 2, 1, 5, 0, 6, 4, 7]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +201,7 @@
        "[[3], [2], [1], [5], [0], [6], [4, 7]]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,6 +214,127 @@
     "    if len(cluster) > 0:\n",
     "        result.append(cluster)\n",
     "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kemeny distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Image](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9tc8lC8WFpftjfLNbRNz1YXqf-PWSIiil1loBcY7kWieR68YpKQ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rankings = np.array([\n",
+    "    [[1], [2, 3], [4], [5], [6, 7]],\n",
+    "    [[1, 3], [4], [2], [5], [7], [6]],\n",
+    "    [[1], [4], [2], [3], [6], [5], [7]],\n",
+    "    [[1], [2, 4], [3], [5], [7], [6]],\n",
+    "    [[2], [3], [4], [5], [1], [6], [7]],\n",
+    "    [[1], [3], [2], [5], [6], [7], [4]],\n",
+    "    [[1], [5], [3], [4], [2], [6], [7]]\n",
+    "])\n",
+    "n = rankings.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to be able to build relation matrix out of the ranking."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build(x):\n",
+    "    n = sum(map(lambda r: len(r), x)) # Total amount of objects\n",
+    "    m = np.zeros((n, n), dtype=np.bool)\n",
+    "    for r in x:\n",
+    "        for i in r:\n",
+    "            for j in range(n):\n",
+    "                if not m[j][i - 1] or j + 1 in r:\n",
+    "                    m[i - 1][j] = True\n",
+    "    return m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can calculate Kemedy distances between each two rankings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.,   5.,   8.,   5.,  10.,   8.,  10.],\n",
+       "       [  5.,   0.,   9.,   6.,  13.,  11.,   9.],\n",
+       "       [  8.,   9.,   0.,   5.,  14.,  14.,  12.],\n",
+       "       [  5.,   6.,   5.,   0.,  13.,  13.,  13.],\n",
+       "       [ 10.,  13.,  14.,  13.,   0.,  16.,  18.],\n",
+       "       [  8.,  11.,  14.,  13.,  16.,   0.,  10.],\n",
+       "       [ 10.,   9.,  12.,  13.,  18.,  10.,   0.]])"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist = np.zeros((n, n))\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        dist[i][j] = np.sum(build(rankings[i]) ^ build(rankings[j]))\n",
+    "dist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's find **Kemeny median** for the ranks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1], [2, 3], [4], [5], [6, 7]]"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "median = np.argmin(np.sum(dist, axis=1))\n",
+    "rankings[median]"
    ]
   }
  ],
