Reevaluate labs for decision theory

--- a/decision_theory/lab1.ipynb
+++ b/decision_theory/lab1.ipynb
@@ -136,6 +136,13 @@
     "usefulness = np.dot(X.T, W)\n",
     "usefulness"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So that we choose the first one."
+   ]
   }
  ],
  "metadata": {
