Rename input data file for lab1

--- a/eco_systems/lab1.ipynb
+++ b/eco_systems/lab1.ipynb
@@ -140,7 +140,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('v1.csv')\n",
+    "data = pd.read_csv('lab1v1.csv')\n",
     "P, D, S = data['Price'].values, data['Demand'].values, data['Supply'].values\n",
     "data"
    ]
