Update eco lab2

--- a/eco_systems/lab2.ipynb
+++ b/eco_systems/lab2.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vector $y$ - consumer needs, where $y_i$ shows how much of $i$-th product people buy"
+    "Vector $y$ - consumer needs, where $y_i$ shows how much of $i$-th product people buy(non-production needs)"
    ]
   },
   {
@@ -160,7 +160,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2"
+    "## Part 2\n",
+    "\n",
+    "Given matrix $A$"
    ]
   },
   {
@@ -291,6 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "It took 11 steps to converge.\n",
       "[[ 2.60970069  1.03075406  1.55706929]\n",
       " [ 0.08563574  1.53300356  0.21721454]\n",
       " [ 0.60570057  0.73727937  1.52675317]]\n"
@@ -299,10 +302,12 @@
    ],
    "source": [
     "B = P = np.eye(A.shape[0])\n",
-    "for i in range(1000):\n",
+    "for i in range(100):\n",
     "    P = P @ A\n",
     "    B = B + P\n",
-    "    if np.max(P) < 1e-2: break\n",
+    "    if np.max(P) < 1e-2:\n",
+    "        print('It took {} steps to converge.'.format(i))\n",
+    "        break\n",
     "print(B)"
    ]
   },
