--- a/eco_systems/lab2.ipynb
+++ b/eco_systems/lab2.ipynb
@@ -278,10 +278,7 @@
    "source": [
     "### Full costs matrix\n",
     "\n",
-    "We can approximate matrix $B$ with limit\n",
-    "$$\n",
-    "\\lim_{n \\to \\infty} (E + \\sum_{i=1}^n A^n) = \\lim_{n \\to \\infty} E + A + A^2 + ... + A^n = B\n",
-    "$$"
+    "Can be computed as"
    ]
   },
   {
@@ -293,22 +290,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It took 11 steps to converge.\n",
-      "[[ 2.60970069  1.03075406  1.55706929]\n",
-      " [ 0.08563574  1.53300356  0.21721454]\n",
-      " [ 0.60570057  0.73727937  1.52675317]]\n"
+      "[[ 2.63157895  1.05263158  1.57894737]\n",
+      " [ 0.0877193   1.53508772  0.21929825]\n",
+      " [ 0.61403509  0.74561404  1.53508772]]\n"
      ]
     }
    ],
    "source": [
-    "B = P = np.eye(A.shape[0])\n",
+    "B = np.linalg.inv(np.eye(A.shape[0]) - A)\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also approximate matrix $B$ with limit\n",
+    "$$\n",
+    "\\lim_{n \\to \\infty} (E + \\sum_{i=1}^n A^n) = \\lim_{n \\to \\infty} E + A + A^2 + ... + A^n = B\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It took 14 steps to converge.\n",
+      "[[ 2.62407473  1.04512739  1.57144316]\n",
+      " [ 0.08700461  1.53437301  0.21858356]\n",
+      " [ 0.61117634  0.74275528  1.53222897]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "B1 = P = np.eye(A.shape[0])\n",
     "for i in range(100):\n",
     "    P = P @ A\n",
-    "    B = B + P\n",
-    "    if np.max(P) < 1e-2:\n",
+    "    B1 = B1 + P\n",
+    "    if np.max(np.abs(B - B1)) < 1e-2:\n",
     "        print('It took {} steps to converge.'.format(i))\n",
     "        break\n",
-    "print(B)"
+    "print(B1)"
    ]
   },
   {
@@ -338,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,14 +374,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.78991109  0.96096363  0.98727949]\n"
+      "[ 0.79824561  0.96929825  0.99561404]\n"
      ]
     }
    ],
