Update eco lab2

--- a/eco_systems/lab2.ipynb
+++ b/eco_systems/lab2.ipynb
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because Frobenius number is less than 1 we can say that technology matrix is **not productive**."
+    "Because Frobenius number is less than 1 we can say that technology matrix is **productive**."
    ]
   },
   {
@@ -262,14 +262,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.51592919  0.57735027 -0.98220003]\n",
-      "[-0.18437634  0.08864844 -0.62213985]\n"
+      "[ 0.57735027  0.57735027  0.57735027]\n",
+      "[ 0.93080864  0.08864844  0.35459377]\n"
      ]
     }
    ],
    "source": [
-    "print(left[np.argmax(vals)])\n",
-    "print(right[np.argmax(vals)])"
+    "print(left[:, np.argmax(vals)])\n",
+    "print(right[:, np.argmax(vals)])"
    ]
   },
   {
